--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alabaster==0.7.12
 alembic==1.0.5
 appnope==0.1.0
--e git+https://github.com/brettelliot/azul.git@f257d5feb9b030bd6b525f2e5b061950edb3a1e5#egg=azul
+-e git+https://github.com/brettelliot/azul.git@74718c37370a197ccbf49815bab1c5258bd92c58#egg=azul
+Babel==2.6.0
 backcall==0.1.0
 bcolz==0.12.1
 beautifulsoup4==4.7.0
@@ -13,13 +15,16 @@ contextlib2==0.5.5
 cyordereddict==1.0.0
 Cython==0.29.2
 decorator==4.3.0
+docutils==0.14
 empyrical==0.5.0
 html5lib==1.0.1
 idna==2.8
+imagesize==1.1.0
 intervaltree==3.0.2
 ipython==7.2.0
 ipython-genutils==0.2.0
 jedi==0.13.2
+Jinja2==2.10
 Logbook==1.4.1
 lru-dict==1.1.6
 lxml==4.2.5
@@ -29,6 +34,7 @@ multipledispatch==0.6.0
 networkx==1.11
 numexpr==2.6.9
 numpy==1.15.4
+packaging==18.0
 pandas==0.22.0
 pandas-datareader==0.7.0
 parso==0.3.1
@@ -40,6 +46,7 @@ prompt-toolkit==2.0.7
 ptyprocess==0.6.0
 pyEX==0.1.6
 Pygments==2.3.1
+pyparsing==2.3.0
 python-dateutil==2.7.5
 python-editor==1.0.3
 pytz==2018.7
@@ -47,9 +54,12 @@ requests==2.21.0
 requests-file==1.4.3
 scipy==1.2.0
 six==1.12.0
+snowballstemmer==1.2.1
 socketIO-client-nexus==0.7.6
 sortedcontainers==2.1.0
 soupsieve==1.6.1
+Sphinx==1.8.3
+sphinxcontrib-websupport==1.1.0
 SQLAlchemy==1.2.15
 statsmodels==0.9.0
 tables==3.4.4
